<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whale Trail</string>
    <string name="main_title">Whale Trail</string>
    <string name="continue_label">Continue</string>
    <string name="newgame_label">New Game</string>
    <string name="info_label">Info</string>
    <string name="exit_label">Quit</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeMessage">Welcome to Whale Trale</string>
    <string name="settings_label">Settings</string>
    <string name="choice1">Travel the ocean</string>
    <string name="choice2">Learn about the ocean</string>
    <string name="choice3">See the Whale top ten</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="title_activity_start_travelling">StartTravelling</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_learn_about_trail">LearnAboutTrail</string>
    <string name="title_activity_see_top_ten">SeeTopTen</string>
    <string name="peoplePicker">Who would you like to bring with you on your journey?</string>
    <string name="leaderDiscription">You will need a leader. What is his/her name?</string>
    <string name="leaderName">Enter leader name</string>
    <string name="person1">Enter member name</string>
    <string name="submitPeople">Lets Go!</string>
    <string name="moreInformationButton">I dont understand</string>
    <string name="title_activity_start_journey">StartJourney</string>
    <string name="welcomeToStore">Welcome to the General Store!</string>
    <string name="storeInformation">Before you leave, you should purchasse some equipment. You have $1000 for the whole trip. Purchase wisely.</string>
    <string name="purchaseWhaleText">1. Whale $100</string>
    <string name="amountOfWhale">0</string>
    <string name="buyButton">Buy</string>
    <string name="purchaseFoodText">2. Food $10</string>
    <string name="amountOfFood">0</string>
    <string name="purchaseClothesText">3. Clothing $10</string>
    <string name="amountOfClothes">0</string>
    <string name="moneyText">Money: $</string>
    <string name="amountOfMoney">1600</string>
    <string name="letsGoButton">Lets Go!</string>
    <string name="title_activity_good_luck_page">GoodLuckPage</string>
    <string name="goodLuck">You are about to start a dangerous journey. You are responsible for getting you and your friends safely to your destination. Are you ready?</string>
    <string name="title_activity_status_page">StatusPage</string>
    <string name="locationText">Independence</string>
    <string name="dateText">May 1, 2013</string>
    <string name="weatherText">Weather: </string>
    <string name="healthText">Health: </string>
    <string name="paceText">Pace: </string>
    <string name="rationsText">Rations: </string>
    <string name="continueText">Continue on trail</string>
    <string name="checkSuppliesText">Check supplies</string>
    <string name="lookAtMapText">Look at map</string>
    <string name="changePaceText">Change pace</string>
    <string name="changeRationsText">Change food rations</string>
    <string name="restText">Stop to rest</string>
    <string name="tradeText">Attempt to trade</string>
    <string name="talkText">Talk to people</string>
    <string name="buyText">Buy supplies</string>
    <string name="title_activity_continue_screen">ContinueScreen</string>
    <string name="distanceText">Distance to next check point: </string>
    <string name="distance">120</string>
    <string name="foodText">Food: </string>
    <string name="landmarkText">Miles until next landmark: </string>
    <string name="travelledText">Miles travelled: </string>
    <string name="title_activity_check_supplies">CheckSupplies</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_change_pace">ChangePace</string>
    <string name="title_activity_change_rations">ChangeRations</string>
    <string name="title_activity_stop_screen">StopScreen</string>
    <string name="title_activity_trade">Trade</string>
    <string name="title_activity_talk">Talk</string>
    <string name="info_text">Welcome to Whale Trail, an adventure across the ocean where you must manage resources and use your fishing skills to keep yourself alive!</string>
    <string name="continue_button">Continue</string>
    <string name="_1">1</string>
    <string name="settings_button">Settings</string>
    <string name="stop_travelling_label">Touch anywhere to continue</string>
    <string name="next_day_label">Next Day!</string>
    <string name="day_label">Day:</string>
    <string name="dead_message">You Died!</string>
    <string name="dead_continue_message">Click anywhere to continue</string>
    <string name="pick_name_label">What\'s your name?</string>
    <string name="found_food_label">Found some food!</string>
    <string name="settings_music_title">Music?</string>
    <string name="settings_music_summary">Play background music</string>
    <string name="setttings_hints_title">Hints?</string>
    <string name="settings_hints_summary">Show hints throughout game</string>
    <string name="title_activity_store">Store</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="win_message">Congratulations! You have safely gotten your family to your destination! YOU WIN!</string>
    <string name="desc">Description</string>
    <string name="title_activity_find_wreck">FindWreck</string>
    <string name="wreckInfo">You found a wrecked ship! What do you want to do?</string>
    <string name="wreckAround">Oooh! That is scary! I want to swim around it.</string>
    <string name="wreckThrough">Wow cool! I want to go through it.</string>
    <string name="sharkInfo">You found a group of sharks! What do you want to do?</string>
    <string name="smAround">Ahhh! They look mean! I am staying far away from them!</string>
    <string name="smThrough">They look pretty friendly. I will just swim through them.</string>
    <string name="mermaidInfo">You found some turtles! What do you want to do?</string>
    <string name="title_activity_around">Around</string>
    <string name="aroundText">You lost two days out at sea.</string>
    <string name="treasureText">You found treasure with food and money!</string>
    <string name="meanSharkText">Oh no! The sharks attacked your family and took some food!</string>
    <string name="turtleText">Wow! Those were friendly turtles! They gave you some food.</string>
    <string name="title_activity_wreck_through">WreckThrough</string>
    <string name="title_activity_find_shark">FindShark</string>
    <string name="title_activity_shark_through">SharkThrough</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_find_mermaid">FindMermaid</string>
    <string name="title_activity_mermaid_through">MermaidThrough</string>
    <string name="how_to_fish">Click the fish to catch it!</string>
    <string name="around_text">You lost a day at sea</string>

</resources>