<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/blue_background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="30dip"
        android:text="@string/main_title"
        android:textColor="@color/main_title"
        android:textSize="25sp" />

    <Button
        android:id="@+id/newgame_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newgame_label" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_label" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label" />

    <com.example.whaletrail.BouncingWhaleView
        android:id="@+id/bouncingWhaleView2"
        android:layout_width="match_parent"
        android:layout_height="938dp" />

</LinearLayout>