<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/death"
    tools:context=".FindWreck" >
    
    <ImageView
        android:id="@+id/wreckPic"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/titanic"
        android:contentDescription="@string/desc"
        />

  	<TextView 
  	    android:id="@+id/wreckInfo"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_marginTop="25dp"
  	    android:layout_centerHorizontal="true"
  	    android:textColor="@color/main_title"
  	    android:textStyle="bold"
  	    android:text="@string/wreckInfo"
  	    />
  	
  	<Button
  	    android:id="@+id/wreckAroundButton"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_centerHorizontal="true"
  	    android:layout_marginTop="355dp"
  	    android:text="@string/wreckAround"
  	    />

  	<Button
  	    android:id="@+id/wreckThroughButton"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_centerHorizontal="true"
  	    android:layout_below="@+id/wreckAroundButton"
  	    android:layout_marginTop="5dp"
  	    android:text="@string/wreckThrough"
  	    />
</RelativeLayout>
